--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>HTML</title>
 </head>
 <body>
-    <header>
-        <center>
+    <header style="text-align: center;">
             <h1 style="color: blue; background-color: aqua; width: 100px;">HTML</h1>
-        </center>
     </header>
     <main>
         <section id="introduction">
