--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>HTML</title>
 </head>
 <body>
-    <header style="text-align: center;">
+    <header>
+        <center>
             <h1 style="color: blue; background-color: aqua; width: 100px;">HTML</h1>
+        </center>
     </header>
     <main>
         <section id="introduction">
